--- a/src/components/sign-in/sign-in.styles.scss
+++ b/src/components/sign-in/sign-in.styles.scss
@@ -3,9 +3,16 @@
     flex-direction: column;
     width: 30vw;
     margin: 50px auto;
+    padding: 25px;
+    border-radius: 2px;
+    box-shadow: 0 1px 1px rgba(0,0,0,0.11), 
+                0 2px 2px rgba(0,0,0,0.11), 
+                0 4px 4px rgba(0,0,0,0.11), 
+                0 8px 8px rgba(0,0,0,0.11), 
+                0 16px 16px rgba(0,0,0,0.11), 
+                0 32px 32px rgba(0,0,0,0.11);
 
     h2 {
-        text-transform: uppercase;
         margin: 0;
     }
 
