--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,13 @@
+@font-face {
+    font-family: 'Cousine-Regular';
+    src: url('assets/fonts/Cousine-Regular.ttf') format('truetype'),
+         url('assets/fonts/Cousine-Bold.ttf') format('truetype'),
+         url('assets/fonts/Cousine-BoldItalic.ttf') format('truetype'),
+         url('assets/fonts/Cousine-Italic.ttf') format('truetype')
+}
+
 body {
-    font-family: 'Open Sans Condensed';
+    font-family: 'Cousine-Regular';
     padding: 20px 60px;
 }
 
@@ -10,4 +18,8 @@ a {
 
 a:hover {
     text-decoration: line-through;
+}
+
+* {
+    box-sizing: border-box;
 }
