--- a/src/components/custom-button/custom-button.styles.scss
+++ b/src/components/custom-button/custom-button.styles.scss
@@ -4,14 +4,13 @@
     width: auto;
     height: 50px;
     letter-spacing: 0.5px;
-    line-height: 50px;
-    padding: 0 35px 0 35px;
-    font-size: 15px;
+    line-height: 40px;
+    padding: 0 30px 0 30px;
+    font-size: 12px;
+    font-weight: bolder;
     background-color: black;
     color: white;
     text-transform: uppercase;
-    font-family: 'Open Sans Condensed';
-    font-weight: bolder;
     border: none;
     cursor: pointer;
   
@@ -19,6 +18,16 @@
       background-color: white;
       color: black;
       border: 1px solid black;
+    }
+
+    &.google-sign-in {
+      background-color: #4285f4;
+      color: white;
+
+      &:hover {
+        background-color: #357ae8;
+        border: none;
+      }
     }
   }
   
